--- a/modules/auth/src/setupMFA/setupMFAButton.component.html
+++ b/modules/auth/src/setupMFA/setupMFAButton.component.html
@@ -1,3 +1,5 @@
-<ion-button *ngIf="isMFAEnabled !== undefined" [color]="color" [fill]="fill" (click)="openMFAModal()">
-  {{ (isMFAEnabled ? 'IDEA_AUTH.DISABLE_MFA' : 'IDEA_AUTH.SETUP_MFA') | translate }}
-</ion-button>
+@if (isMFAEnabled !== undefined) {
+  <ion-button [color]="color" [fill]="fill" (click)="openMFAModal()">
+    {{ (isMFAEnabled ? 'IDEA_AUTH.DISABLE_MFA' : 'IDEA_AUTH.SETUP_MFA') | translate }}
+  </ion-button>
+}
