--- a/modules/auth/src/setupMFA/setupMFAModal.component.html
+++ b/modules/auth/src/setupMFA/setupMFAModal.component.html
@@ -18,7 +18,9 @@
     </ion-list-header>
     <ion-card color="white">
       <ion-card-content>
-        <div id="qrCodeContainer" *ngIf="!isMFAEnabled"></div>
+        @if (!isMFAEnabled) {
+          <div id="qrCodeContainer"></div>
+        }
         <ion-item color="light">
           <ion-input
             type="text"
