--- a/modules/common/src/offline/offlineIndicator.component.html
+++ b/modules/common/src/offline/offlineIndicator.component.html
@@ -1,17 +1,20 @@
-<ion-fab
-  *ngIf="
-    _platform.is('mobile') && (_offline.isOffline() || _offline.synchronizing || _offline.requiresManualConfirmation)
-  "
-  [vertical]="vertical"
-  [horizontal]="horizontal"
-  [edge]="edge"
->
-  <ion-fab-button color="dark" size="small" (click)="showStatus()">
-    <!-- OFFLINE -->
-    <ion-icon name="airplane" *ngIf="_offline.isOffline()" />
-    <!-- SYNCHRONISING -->
-    <ion-icon name="sync" *ngIf="_offline.isOnline() && _offline.synchronizing" />
-    <!-- NEED MANAL SYNCHRONISATION -->
-    <ion-icon name="pause" *ngIf="_offline.isOnline() && _offline.requiresManualConfirmation" />
-  </ion-fab-button>
-</ion-fab>
+@if (
+  _platform.is('mobile') && (_offline.isOffline() || _offline.synchronizing || _offline.requiresManualConfirmation)
+) {
+  <ion-fab [vertical]="vertical" [horizontal]="horizontal" [edge]="edge">
+    <ion-fab-button color="dark" size="small" (click)="showStatus()">
+      <!-- OFFLINE -->
+      @if (_offline.isOffline()) {
+        <ion-icon name="airplane" />
+      }
+      <!-- SYNCHRONISING -->
+      @if (_offline.isOnline() && _offline.synchronizing) {
+        <ion-icon name="sync" />
+      }
+      <!-- NEED MANAL SYNCHRONISATION -->
+      @if (_offline.isOnline() && _offline.requiresManualConfirmation) {
+        <ion-icon name="pause" />
+      }
+    </ion-fab-button>
+  </ion-fab>
+}
