--- a/modules/common/src/labeler/labeler.component.html
+++ b/modules/common/src/labeler/labeler.component.html
@@ -6,41 +6,63 @@
       </ion-button>
     </ion-buttons>
     <ion-title>{{ title }}</ion-title>
-    <ion-buttons slot="end" *ngIf="!disabled">
-      <ion-button [title]="'COMMON.SAVE' | translate" (click)="save()">
-        <ion-icon slot="icon-only" name="checkmark" />
-      </ion-button>
-    </ion-buttons>
+    @if (!disabled) {
+      <ion-buttons slot="end">
+        <ion-button [title]="'COMMON.SAVE' | translate" (click)="save()">
+          <ion-icon slot="icon-only" name="checkmark" />
+        </ion-button>
+      </ion-buttons>
+    }
   </ion-toolbar>
 </ion-header>
 <ion-content [class.ion-padding]="isLargeScreen()">
-  <ion-list class="aList" *ngIf="variables?.length && !disabled">
-    <ion-list-header>
-      <ion-label>
-        <h2>{{ 'IDEA_COMMON.LABELER.VARIABLES_AVAILABLE' | translate }}</h2>
-        <p>{{ 'IDEA_COMMON.LABELER.VARIABLES_AVAILABLE_I' | translate }}</p>
-      </ion-label>
-    </ion-list-header>
-    <ul class="variablesList">
-      <li *ngFor="let v of variables">
-        <small>{{ v.code }}</small> {{ getVariableDescription(v) }}
-      </li>
-    </ul>
-  </ion-list>
-  <p class="explanation" *ngIf="!disabled">
-    <span *ngIf="obligatory">{{ 'IDEA_COMMON.LABELER.EXPLANATION_OBLIGATORY' | translate }}</span>
-    {{ 'IDEA_COMMON.LABELER.EXPLANATION' | translate }}
-  </p>
-  <idea-mde-toolbar *ngIf="markdown && !disabled" />
-  <ion-list class="aList" [class.viewMode]="disabled" *ngIf="_label">
-    <ion-item lines="inset" *ngFor="let l of languages.available" [class.fieldHasError]="hasFieldAnError(l)">
-      <ion-thumbnail slot="start"><img [src]="getFlagURL(l)" /></ion-thumbnail>
-      <ion-label position="stacked">
-        {{ l }}
-        <ion-text *ngIf="l === languages.default">- {{ 'COMMON.DEFAULT' | translate }}</ion-text>
-      </ion-label>
-      <ion-input type="text" *ngIf="!textarea" [(ngModel)]="_label[l]" [disabled]="disabled" />
-      <ion-textarea *ngIf="textarea" [(ngModel)]="_label[l]" [disabled]="disabled" [rows]="3" [autoGrow]="true" />
-    </ion-item>
-  </ion-list>
+  @if (variables?.length && !disabled) {
+    <ion-list class="aList">
+      <ion-list-header>
+        <ion-label>
+          <h2>{{ 'IDEA_COMMON.LABELER.VARIABLES_AVAILABLE' | translate }}</h2>
+          <p>{{ 'IDEA_COMMON.LABELER.VARIABLES_AVAILABLE_I' | translate }}</p>
+        </ion-label>
+      </ion-list-header>
+      <ul class="variablesList">
+        @for (v of variables; track v) {
+          <li>
+            <small>{{ v.code }}</small> {{ getVariableDescription(v) }}
+          </li>
+        }
+      </ul>
+    </ion-list>
+  }
+  @if (!disabled) {
+    <p class="explanation">
+      @if (obligatory) {
+        <span>{{ 'IDEA_COMMON.LABELER.EXPLANATION_OBLIGATORY' | translate }}</span>
+      }
+      {{ 'IDEA_COMMON.LABELER.EXPLANATION' | translate }}
+    </p>
+  }
+  @if (markdown && !disabled) {
+    <idea-mde-toolbar />
+  }
+  @if (_label) {
+    <ion-list class="aList" [class.viewMode]="disabled">
+      @for (l of languages.available; track l) {
+        <ion-item lines="inset" [class.fieldHasError]="hasFieldAnError(l)">
+          <ion-thumbnail slot="start"><img [src]="getFlagURL(l)" /></ion-thumbnail>
+          <ion-label position="stacked">
+            {{ l }}
+            @if (l === languages.default) {
+              <ion-text>- {{ 'COMMON.DEFAULT' | translate }}</ion-text>
+            }
+          </ion-label>
+          @if (!textarea) {
+            <ion-input type="text" [(ngModel)]="_label[l]" [disabled]="disabled" />
+          }
+          @if (textarea) {
+            <ion-textarea [(ngModel)]="_label[l]" [disabled]="disabled" [rows]="3" [autoGrow]="true" />
+          }
+        </ion-item>
+      }
+    </ion-list>
+  }
 </ion-content>
