--- a/modules/common/src/list/listElements.component.html
+++ b/modules/common/src/list/listElements.component.html
@@ -22,26 +22,32 @@
 </ion-header>
 <ion-content>
   <ion-list class="listElements">
-    <ion-item lines="none" *ngIf="!filteredList.length">
-      <ion-label>
-        <i>{{ noElementsFoundText ?? ('IDEA_COMMON.LIST.NO_ELEMENTS_FOUND' | translate) }}</i>
-      </ion-label>
-    </ion-item>
-    <ion-item class="listElement" *ngFor="let element of filteredList">
-      <ion-label>{{ getElementName(element) }}</ion-label>
-      <ion-button slot="end" fill="clear" *ngIf="labelElements" (click)="editElement(element)">
-        <ion-icon icon="pencil-sharp" slot="icon-only" />
-      </ion-button>
-      <ion-button
-        slot="end"
-        fill="clear"
-        color="danger"
-        [title]="t._('IDEA_COMMON.LIST.DELETE_ELEMENT')"
-        (click)="removeElement(element)"
-      >
-        <ion-icon icon="trash-outline" slot="icon-only" />
-      </ion-button>
-    </ion-item>
+    @if (!filteredList.length) {
+      <ion-item lines="none">
+        <ion-label>
+          <i>{{ noElementsFoundText ?? ('IDEA_COMMON.LIST.NO_ELEMENTS_FOUND' | translate) }}</i>
+        </ion-label>
+      </ion-item>
+    }
+    @for (element of filteredList; track element) {
+      <ion-item class="listElement">
+        <ion-label>{{ getElementName(element) }}</ion-label>
+        @if (labelElements) {
+          <ion-button slot="end" fill="clear" (click)="editElement(element)">
+            <ion-icon icon="pencil-sharp" slot="icon-only" />
+          </ion-button>
+        }
+        <ion-button
+          slot="end"
+          fill="clear"
+          color="danger"
+          [title]="t._('IDEA_COMMON.LIST.DELETE_ELEMENT')"
+          (click)="removeElement(element)"
+        >
+          <ion-icon icon="trash-outline" slot="icon-only" />
+        </ion-button>
+      </ion-item>
+    }
   </ion-list>
   <ion-infinite-scroll (ionInfinite)="search(searchbar?.value, $event.target)">
     <ion-infinite-scroll-content />
