--- a/modules/common/src/select/select.component.html
+++ b/modules/common/src/select/select.component.html
@@ -7,25 +7,28 @@
   [class.withLabel]="label"
   (click)="disabled ? doSelectWhenDisabled() : fetchDataAndOpenModal()"
 >
-  <ion-button
-    fill="clear"
-    slot="start"
-    *ngIf="icon"
-    [color]="iconColor"
-    [class.marginTop]="label"
-    (click)="doIconSelect($event)"
-  >
-    <ion-icon [icon]="icon" slot="icon-only" />
-  </ion-button>
-  <ion-label position="stacked" *ngIf="label" [class.selectable]="!disabled || tappableWhenDisabled">
-    {{ label }}
-    <ion-text class="obligatoryDot" *ngIf="obligatory && !disabled" />
-  </ion-label>
+  @if (icon) {
+    <ion-button fill="clear" slot="start" [color]="iconColor" [class.marginTop]="label" (click)="doIconSelect($event)">
+      <ion-icon [icon]="icon" slot="icon-only" />
+    </ion-button>
+  }
+  @if (label) {
+    <ion-label position="stacked" [class.selectable]="!disabled || tappableWhenDisabled">
+      {{ label }}
+      @if (obligatory && !disabled) {
+        <ion-text class="obligatoryDot" />
+      }
+    </ion-label>
+  }
   <ion-label class="description" [class.selectable]="!disabled || tappableWhenDisabled">
-    <ion-text class="placeholder" *ngIf="!description && !disabled">
-      {{ placeholder }}
-    </ion-text>
+    @if (!description && !disabled) {
+      <ion-text class="placeholder">
+        {{ placeholder }}
+      </ion-text>
+    }
     {{ description }}
   </ion-label>
-  <ion-icon slot="end" icon="caret-down" class="selectIcon" *ngIf="!disabled" [class.selectable]="!disabled" />
+  @if (!disabled) {
+    <ion-icon slot="end" icon="caret-down" class="selectIcon" [class.selectable]="!disabled" />
+  }
 </ion-item>
