--- a/modules/common/src/sentiment/sentiment.component.html
+++ b/modules/common/src/sentiment/sentiment.component.html
@@ -1,12 +1,17 @@
-<ion-item *ngIf="text && _offline.isOnline()" [lines]="lines" [color]="color">
-  <ion-spinner slot="end" size="small" *ngIf="!sentiment" />
-  <ion-badge
-    slot="end"
-    size="small"
-    *ngIf="sentiment"
-    [color]="getColorBySentiment()"
-    [title]="'IDEA_COMMON.SENTIMENT.RESULT_HINT' | translate : { sentiment: sentiment }"
-  >
-    {{ 'IDEA_COMMON.SENTIMENT.RESULT.' + sentiment | translate }}
-  </ion-badge>
-</ion-item>
+@if (text && _offline.isOnline()) {
+  <ion-item [lines]="lines" [color]="color">
+    @if (!sentiment) {
+      <ion-spinner slot="end" size="small" />
+    }
+    @if (sentiment) {
+      <ion-badge
+        slot="end"
+        size="small"
+        [color]="getColorBySentiment()"
+        [title]="'IDEA_COMMON.SENTIMENT.RESULT_HINT' | translate: { sentiment: sentiment }"
+      >
+        {{ 'IDEA_COMMON.SENTIMENT.RESULT.' + sentiment | translate }}
+      </ion-badge>
+    }
+  </ion-item>
+}
