--- a/modules/common/src/userAvatar/userAvatar.component.html
+++ b/modules/common/src/userAvatar/userAvatar.component.html
@@ -1,21 +1,24 @@
 <div class="container">
-  <ion-avatar style="height: var(--avatar-size); width: var(--avatar-size)" *ngIf="src" [ngClass]="size" [title]="name">
-    <ion-img [src]="src" (ionError)="fallbackToInitials()" />
-  </ion-avatar>
-  <div
-    class="circle"
-    style="height: var(--avatar-size); width: var(--avatar-size)"
-    *ngIf="!src"
-    [ngClass]="size"
-    [title]="name"
-    [style.background]="'#' + color"
-  >
+  @if (src) {
+    <ion-avatar style="height: var(--avatar-size); width: var(--avatar-size)" [ngClass]="size" [title]="name">
+      <ion-img [src]="src" (ionError)="fallbackToInitials()" />
+    </ion-avatar>
+  }
+  @if (!src) {
     <div
-      class="text"
-      style="line-height: var(--avatar-size); font-size: var(--avatar-font-size)"
-      [style.color]="'#' + fontColor"
+      class="circle"
+      style="height: var(--avatar-size); width: var(--avatar-size)"
+      [ngClass]="size"
+      [title]="name"
+      [style.background]="'#' + color"
     >
-      {{ initials }}
+      <div
+        class="text"
+        style="line-height: var(--avatar-size); font-size: var(--avatar-font-size)"
+        [style.color]="'#' + fontColor"
+      >
+        {{ initials }}
+      </div>
     </div>
-  </div>
+  }
 </div>
