--- a/modules/teams/src/attachments/attachments.component.html
+++ b/modules/teams/src/attachments/attachments.component.html
@@ -1,84 +1,91 @@
-<ion-item
-  class="attachments"
-  [class.fieldHasError]="hasFieldAnError('attachments[' + index + '].attachmentId')"
-  [class.odd]="odd"
-  [lines]="lines"
-  *ngFor="let att of attachments; let index = index; let odd = odd"
->
-  <ion-button
-    fill="clear"
-    size="small"
-    slot="start"
-    *ngIf="att.attachmentId && _offline.isOnline()"
-    (click)="openAttachment(att)"
+@for (att of attachments; track att; let index = $index; let odd = $odd) {
+  <ion-item
+    class="attachments"
+    [class.fieldHasError]="hasFieldAnError('attachments[' + index + '].attachmentId')"
+    [class.odd]="odd"
+    [lines]="lines"
   >
-    <ion-icon name="open-outline" slot="icon-only" size="small" />
-  </ion-button>
-  <ion-icon
-    slot="start"
-    color="medium"
-    *ngIf="!editMode && att.attachmentId"
-    [name]="getFormatIcon(att.format)"
-    [title]="att.format"
-  />
-  <ion-input
-    *ngIf="editMode && att.attachmentId"
-    [(ngModel)]="att.name"
-    (ionBlur)="$event.target.value = $event.target.value || _translate._('IDEA_TEAMS.ATTACHMENTS.NO_NAME')"
-  />
-  <ion-label class="loadingWarning" *ngIf="editMode && !att.attachmentId">
-    {{ 'IDEA_TEAMS.ATTACHMENTS.UPLOADING_ATTACHMENT_WARNING' | translate }}
-  </ion-label>
-  <ion-label *ngIf="!editMode">{{ att.name }}.{{ att.format }}</ion-label>
-  <ion-spinner slot="end" *ngIf="!att.attachmentId" [title]="'IDEA_TEAMS.ATTACHMENTS.UPLOADING' | translate" />
-  <ion-button
-    *ngIf="editMode"
-    slot="end"
-    color="danger"
-    fill="clear"
-    [title]="'IDEA_TEAMS.ATTACHMENTS.REMOVE_ATTACHMENT' | translate"
-    (click)="removeAttachment(att)"
-  >
-    <ion-icon name="remove" slot="icon-only" />
-  </ion-button>
-</ion-item>
-<!----->
-<ion-item lines="none" class="noAttachments" *ngIf="!editMode && !attachments?.length">
-  <ion-label>
-    {{ 'IDEA_TEAMS.ATTACHMENTS.NO_ATTACHMENT' | translate }}
-  </ion-label>
-</ion-item>
-<!----->
-<div *ngIf="editMode">
-  <ion-item class="attachments" [lines]="lines" *ngFor="let err of uploadErrors">
-    <ion-icon name="alert-circle" slot="start" color="danger" />
-    <ion-label color="danger">
-      {{ err }}
-      <p>{{ 'IDEA_TEAMS.ATTACHMENTS.ERROR_UPLOADING_ATTACHMENT' | translate }}</p>
-    </ion-label>
-    <ion-button
-      slot="end"
-      color="danger"
-      fill="clear"
-      [title]="'IDEA_TEAMS.ATTACHMENTS.HIDE_ERROR' | translate"
-      (click)="uploadErrors.splice(uploadErrors.indexOf(err), 1)"
-    >
-      <ion-icon name="close" slot="icon-only" />
-    </ion-button>
+    @if (att.attachmentId && _offline.isOnline()) {
+      <ion-button fill="clear" size="small" slot="start" (click)="openAttachment(att)">
+        <ion-icon name="open-outline" slot="icon-only" size="small" />
+      </ion-button>
+    }
+    @if (!editMode && att.attachmentId) {
+      <ion-icon slot="start" color="medium" [name]="getFormatIcon(att.format)" [title]="att.format" />
+    }
+    @if (editMode && att.attachmentId) {
+      <ion-input
+        [(ngModel)]="att.name"
+        (ionBlur)="$event.target.value = $event.target.value || _translate._('IDEA_TEAMS.ATTACHMENTS.NO_NAME')"
+      />
+    }
+    @if (editMode && !att.attachmentId) {
+      <ion-label class="loadingWarning">
+        {{ 'IDEA_TEAMS.ATTACHMENTS.UPLOADING_ATTACHMENT_WARNING' | translate }}
+      </ion-label>
+    }
+    @if (!editMode) {
+      <ion-label>{{ att.name }}.{{ att.format }}</ion-label>
+    }
+    @if (!att.attachmentId) {
+      <ion-spinner slot="end" [title]="'IDEA_TEAMS.ATTACHMENTS.UPLOADING' | translate" />
+    }
+    @if (editMode) {
+      <ion-button
+        slot="end"
+        color="danger"
+        fill="clear"
+        [title]="'IDEA_TEAMS.ATTACHMENTS.REMOVE_ATTACHMENT' | translate"
+        (click)="removeAttachment(att)"
+      >
+        <ion-icon name="remove" slot="icon-only" />
+      </ion-button>
+    }
   </ion-item>
-</div>
+}
 <!----->
-<ion-item lines="none" class="selectable" *ngIf="editMode" (click)="browseFiles()">
-  <ion-label color="medium">{{ 'IDEA_TEAMS.ATTACHMENTS.TAP_TO_ADD_ATTACHMENT' | translate }}</ion-label>
-  <input id="attachmentPicker" type="file" multiple style="display: none" (change)="addAttachmentFromFile($event)" />
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="editMode" />
-  <ion-button
-    slot="end"
-    fill="clear"
-    color="dark"
-    *ngIf="editMode && isCapacitor()"
-    (click)="takePictureAndAttach($event)"
-  >
-    <ion-icon slot="icon-only" name="camera" />
-  </ion-button>
-</ion-item>
+@if (!editMode && !attachments?.length) {
+  <ion-item lines="none" class="noAttachments">
+    <ion-label>
+      {{ 'IDEA_TEAMS.ATTACHMENTS.NO_ATTACHMENT' | translate }}
+    </ion-label>
+  </ion-item>
+}
+<!----->
+@if (editMode) {
+  <div>
+    @for (err of uploadErrors; track err) {
+      <ion-item class="attachments" [lines]="lines">
+        <ion-icon name="alert-circle" slot="start" color="danger" />
+        <ion-label color="danger">
+          {{ err }}
+          <p>{{ 'IDEA_TEAMS.ATTACHMENTS.ERROR_UPLOADING_ATTACHMENT' | translate }}</p>
+        </ion-label>
+        <ion-button
+          slot="end"
+          color="danger"
+          fill="clear"
+          [title]="'IDEA_TEAMS.ATTACHMENTS.HIDE_ERROR' | translate"
+          (click)="uploadErrors.splice(uploadErrors.indexOf(err), 1)"
+        >
+          <ion-icon name="close" slot="icon-only" />
+        </ion-button>
+      </ion-item>
+    }
+  </div>
+}
+<!----->
+@if (editMode) {
+  <ion-item lines="none" class="selectable" (click)="browseFiles()">
+    <ion-label color="medium">{{ 'IDEA_TEAMS.ATTACHMENTS.TAP_TO_ADD_ATTACHMENT' | translate }}</ion-label>
+    <input id="attachmentPicker" type="file" multiple style="display: none" (change)="addAttachmentFromFile($event)" />
+    @if (editMode) {
+      <ion-icon slot="end" name="caret-down" class="selectIcon" />
+    }
+    @if (editMode && isCapacitor()) {
+      <ion-button slot="end" fill="clear" color="dark" (click)="takePictureAndAttach($event)">
+        <ion-icon slot="icon-only" name="camera" />
+      </ion-button>
+    }
+  </ion-item>
+}
