--- a/modules/teams/src/resourceCenter/RCFolders.component.html
+++ b/modules/teams/src/resourceCenter/RCFolders.component.html
@@ -11,14 +11,15 @@
       (ionInput)="search($event.target ? $event.target.value : '')"
     />
     <ion-buttons slot="end">
-      <ion-button
-        *ngIf="admin"
-        [disabled]="_offline.isOffline()"
-        [title]="'IDEA_TEAMS.RESOURCE_CENTER.CREATE_NEW_FOLDER' | translate"
-        (click)="newFolder()"
-      >
-        <ion-icon slot="icon-only" name="add" />
-      </ion-button>
+      @if (admin) {
+        <ion-button
+          [disabled]="_offline.isOffline()"
+          [title]="'IDEA_TEAMS.RESOURCE_CENTER.CREATE_NEW_FOLDER' | translate"
+          (click)="newFolder()"
+        >
+          <ion-icon slot="icon-only" name="add" />
+        </ion-button>
+      }
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -27,37 +28,43 @@
     <ion-refresher-content />
   </ion-refresher>
   <ion-list class="aList">
-    <ion-item *ngIf="!filteredFolders">
-      <ion-label>
-        <ion-skeleton-text animated style="width: 50%" />
-      </ion-label>
-    </ion-item>
-    <ion-item class="noElements" *ngIf="filteredFolders && !filteredFolders.length">
-      <ion-label>{{ 'COMMON.NO_ELEMENT_FOUND' | translate }}</ion-label>
-    </ion-item>
-    <ion-item *ngFor="let folder of filteredFolders" button (click)="openFolder(folder)">
-      <ion-label>{{ folder.name }}</ion-label>
-      <ion-button
-        color="medium"
-        fill="clear"
-        slot="end"
-        [title]="'IDEA_TEAMS.RESOURCE_CENTER.RENAME' | translate"
-        [disabled]="_offline.isOffline()"
-        (click)="renameFolder(folder, $event)"
-      >
-        <ion-icon name="pencil" slot="icon-only" />
-      </ion-button>
-      <ion-button
-        color="danger"
-        fill="clear"
-        slot="end"
-        [title]="'IDEA_TEAMS.RESOURCE_CENTER.DELETE' | translate"
-        [disabled]="_offline.isOffline()"
-        (click)="deleteFolder(folder, $event)"
-      >
-        <ion-icon name="trash" slot="icon-only" />
-      </ion-button>
-    </ion-item>
+    @if (!filteredFolders) {
+      <ion-item>
+        <ion-label>
+          <ion-skeleton-text animated style="width: 50%" />
+        </ion-label>
+      </ion-item>
+    }
+    @if (filteredFolders && !filteredFolders.length) {
+      <ion-item class="noElements">
+        <ion-label>{{ 'COMMON.NO_ELEMENT_FOUND' | translate }}</ion-label>
+      </ion-item>
+    }
+    @for (folder of filteredFolders; track folder) {
+      <ion-item button (click)="openFolder(folder)">
+        <ion-label>{{ folder.name }}</ion-label>
+        <ion-button
+          color="medium"
+          fill="clear"
+          slot="end"
+          [title]="'IDEA_TEAMS.RESOURCE_CENTER.RENAME' | translate"
+          [disabled]="_offline.isOffline()"
+          (click)="renameFolder(folder, $event)"
+        >
+          <ion-icon name="pencil" slot="icon-only" />
+        </ion-button>
+        <ion-button
+          color="danger"
+          fill="clear"
+          slot="end"
+          [title]="'IDEA_TEAMS.RESOURCE_CENTER.DELETE' | translate"
+          [disabled]="_offline.isOffline()"
+          (click)="deleteFolder(folder, $event)"
+        >
+          <ion-icon name="trash" slot="icon-only" />
+        </ion-button>
+      </ion-item>
+    }
   </ion-list>
   <ion-infinite-scroll (ionInfinite)="search(searchbar?.value, $event.target)">
     <ion-infinite-scroll-content />
