--- a/modules/teams/src/resourceCenter/RCPicker.component.html
+++ b/modules/teams/src/resourceCenter/RCPicker.component.html
@@ -1,51 +1,68 @@
-<ion-item class="resources" *ngFor="let r of attachedResources; let odd = odd" [lines]="lines" [class.odd]="odd">
-  <ion-button fill="clear" size="small" slot="start" *ngIf="_offline.isOnline()" (click)="openResource(r, true)">
-    <ion-icon name="open-outline" slot="icon-only" size="small" />
-  </ion-button>
-  <ion-icon slot="start" color="medium" *ngIf="!editMode" [name]="getFormatIcon(r.format)" [title]="r.format" />
-  <ion-input
-    *ngIf="editMode"
-    [(ngModel)]="r.name"
-    [placeholder]="r.originalName"
-    (ionBlur)="$event.target.value = $event.target.value || _translate._('IDEA_TEAMS.RESOURCE_CENTER.NO_NAME')"
+@for (r of attachedResources; track r; let odd = $odd) {
+  <ion-item class="resources" [lines]="lines" [class.odd]="odd">
+    @if (_offline.isOnline()) {
+      <ion-button fill="clear" size="small" slot="start" (click)="openResource(r, true)">
+        <ion-icon name="open-outline" slot="icon-only" size="small" />
+      </ion-button>
+    }
+    @if (!editMode) {
+      <ion-icon slot="start" color="medium" [name]="getFormatIcon(r.format)" [title]="r.format" />
+    }
+    @if (editMode) {
+      <ion-input
+        [(ngModel)]="r.name"
+        [placeholder]="r.originalName"
+        (ionBlur)="$event.target.value = $event.target.value || _translate._('IDEA_TEAMS.RESOURCE_CENTER.NO_NAME')"
+      />
+    }
+    @if (!editMode) {
+      <ion-label>
+        {{ r.name }}
+        <p>{{ r.originalName }}.{{ r.format }}</p>
+        @if (resources && isResourceNewerVersionAvailable(r)) {
+          <p class="ion-text-wrap oldVersionAlert">
+            {{ 'IDEA_TEAMS.RESOURCE_CENTER.VERSION_ATTACHED_IS_OLDER' | translate }}.
+            @if (_offline.isOnline()) {
+              <ion-text class="tappable" (click)="openResource(r)">
+                {{ 'IDEA_TEAMS.RESOURCE_CENTER.OPEN_OLD_VERSION' | translate }}
+              </ion-text>
+            }
+          </p>
+        }
+      </ion-label>
+    }
+    @if (editMode) {
+      <ion-button
+        slot="end"
+        color="danger"
+        fill="clear"
+        [title]="'IDEA_TEAMS.RESOURCE_CENTER.REMOVE_RESOURCE' | translate"
+        (click)="removeResource(r)"
+      >
+        <ion-icon name="remove" slot="icon-only" />
+      </ion-button>
+    }
+  </ion-item>
+}
+<!----->
+@if (!editMode && !attachedResources?.length) {
+  <ion-item lines="none" class="noResources">
+    <ion-label>
+      {{ 'IDEA_TEAMS.RESOURCE_CENTER.NO_RESOURCES' | translate }}
+    </ion-label>
+  </ion-item>
+}
+<!----->
+@if (editMode && resourcesSuggestions) {
+  <idea-select
+    [data]="resourcesSuggestions"
+    [placeholder]="'IDEA_TEAMS.RESOURCE_CENTER.TAP_TO_ADD_A_RESOURCE' | translate"
+    [searchPlaceholder]="'IDEA_TEAMS.RESOURCE_CENTER.RESOURCES_AVAILABLE' | translate"
+    [lines]="'none'"
+    [clearValueAfterSelection]="true"
+    [hideClearButton]="true"
+    [avoidAutoSelection]="true"
+    [hideIdFromUI]="true"
+    (select)="$event ? addResource($event.value) : null"
   />
-  <ion-label *ngIf="!editMode">
-    {{ r.name }}
-    <p>{{ r.originalName }}.{{ r.format }}</p>
-    <p class="ion-text-wrap oldVersionAlert" *ngIf="resources && isResourceNewerVersionAvailable(r)">
-      {{ 'IDEA_TEAMS.RESOURCE_CENTER.VERSION_ATTACHED_IS_OLDER' | translate }}.
-      <ion-text class="tappable" *ngIf="_offline.isOnline()" (click)="openResource(r)">
-        {{ 'IDEA_TEAMS.RESOURCE_CENTER.OPEN_OLD_VERSION' | translate }}
-      </ion-text>
-    </p>
-  </ion-label>
-  <ion-button
-    *ngIf="editMode"
-    slot="end"
-    color="danger"
-    fill="clear"
-    [title]="'IDEA_TEAMS.RESOURCE_CENTER.REMOVE_RESOURCE' | translate"
-    (click)="removeResource(r)"
-  >
-    <ion-icon name="remove" slot="icon-only" />
-  </ion-button>
-</ion-item>
-<!----->
-<ion-item lines="none" class="noResources" *ngIf="!editMode && !attachedResources?.length">
-  <ion-label>
-    {{ 'IDEA_TEAMS.RESOURCE_CENTER.NO_RESOURCES' | translate }}
-  </ion-label>
-</ion-item>
-<!----->
-<idea-select
-  *ngIf="editMode && resourcesSuggestions"
-  [data]="resourcesSuggestions"
-  [placeholder]="'IDEA_TEAMS.RESOURCE_CENTER.TAP_TO_ADD_A_RESOURCE' | translate"
-  [searchPlaceholder]="'IDEA_TEAMS.RESOURCE_CENTER.RESOURCES_AVAILABLE' | translate"
-  [lines]="'none'"
-  [clearValueAfterSelection]="true"
-  [hideClearButton]="true"
-  [avoidAutoSelection]="true"
-  [hideIdFromUI]="true"
-  (select)="$event ? addResource($event.value) : null"
-/>
+}
